--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 	<div class="todo-app">
+
 		<div class="container">
 			<div class="row">
 				<header class="text-center">
@@ -20,8 +21,93 @@
 				</header>
 			</div>
 
+			<div class="row">
+				<div class="input-section d-flex flex-row justify-content-center">
+					<div class="todo-input">
+						<input type="text" class="form-control"
+							placeholder="Write another todo">
+					</div>
+
+
+					<div class="save-todo btn btn-primary">
+						Save
+					</div>
+
+					<div class="get-todos btn btn-warning">
+						Get Pending Todos
+					</div>
+				</div>
+			</div>
+
+
+			<!-- list of todos -->
+			<div class="todo-data">
+				<div class="row">
+					<div class="list-todo-heading d-flex flex-row justify-content-between">
+						<div class="todo-no">No.</div>
+						<div class="todo-details">Todo Item</div>
+						<div class="todo-status">Status</div>
+						<div class="todo-actions">Actions</div>
+					</div>
+				</div>
+				<hr>
+
+				<!-- Actual todos -->
+
+				<div class="row">
+					<div class="todo-item d-flex flex-row justify-content-between align-items-center">
+						<div class="todo-no">1.</div>
+						<div class="todo-detail text-muted">Complete the action items on todos</div>
+						<div class="todo-status text-muted">In Progress</div>
+						<div class="todo-actions">
+							<button class="btn btn-danger">Delete</button>
+							<button class="btn btn-success">Finish</button>
+						</div>
+					</div>
+				</div>
+				<hr>
+
+
+				<div class="row">
+					<div class="todo-item d-flex flex-row justify-content-between align-items-center">
+						<div class="todo-no">1.</div>
+						<div class="todo-detail text-muted">Complete the action items on todos</div>
+						<div class="todo-status text-muted">In Progress</div>
+						<div class="todo-actions">
+							<button class="btn btn-danger">Delete</button>
+							<button class="btn btn-success">Finish</button>
+						</div>
+					</div>
+				</div>
+				<hr>
+
+
+				<div class="row">
+					<div class="todo-item d-flex flex-row justify-content-between align-items-center">
+						<div class="todo-no">1.</div>
+						<div class="todo-detail text-muted">Complete the action items on todos</div>
+						<div class="todo-status text-muted">In Progress</div>
+						<div class="todo-actions">
+							<button class="btn btn-danger">Delete</button>
+							<button class="btn btn-success">Finish</button>
+						</div>
+					</div>
+				</div>
+				<hr>
+			</div>
+
+
 		</div>
 	</div>
+
+
+
+
+
+
+
+
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous"></script>
