--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						Save
 					</div>
 
-					<div class="get-todos btn btn-warning">
+					<div class="get-todos btn btn-warning" id="get-todos">
 						Get Pending Todos
 					</div>
 				</div>
@@ -41,7 +41,7 @@
 
 
 			<!-- list of todos -->
-			<div class="todo-data">
+			<div class="todo-data" id="todo-data">
 				<div class="row">
 					<div class="list-todo-heading d-flex flex-row justify-content-between">
 						<div class="todo-no">No.</div>
@@ -59,37 +59,9 @@
 						<div class="todo-no">1.</div>
 						<div class="todo-detail text-muted">Complete the action items on todos</div>
 						<div class="todo-status text-muted">In Progress</div>
-						<div class="todo-actions">
-							<button class="btn btn-danger">Delete</button>
-							<button class="btn btn-success">Finish</button>
-						</div>
-					</div>
-				</div>
-				<hr>
-
-
-				<div class="row">
-					<div class="todo-item d-flex flex-row justify-content-between align-items-center">
-						<div class="todo-no">1.</div>
-						<div class="todo-detail text-muted">Complete the action items on todos</div>
-						<div class="todo-status text-muted">In Progress</div>
-						<div class="todo-actions">
-							<button class="btn btn-danger">Delete</button>
-							<button class="btn btn-success">Finish</button>
-						</div>
-					</div>
-				</div>
-				<hr>
-
-
-				<div class="row">
-					<div class="todo-item d-flex flex-row justify-content-between align-items-center">
-						<div class="todo-no">1.</div>
-						<div class="todo-detail text-muted">Complete the action items on todos</div>
-						<div class="todo-status text-muted">In Progress</div>
-						<div class="todo-actions">
-							<button class="btn btn-danger">Delete</button>
-							<button class="btn btn-success">Finish</button>
+						<div class="todo-actions d-flex justify-content-start gap-2">
+							<button class="btn btn-danger"> Delete </button>
+							<button class="btn btn-success">Finished</button>
 						</div>
 					</div>
 				</div>
