--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 				<!-- Actual todos -->
 
-				<div class="row">
+				<!-- <div class="row">
 					<div class="todo-item d-flex flex-row justify-content-between align-items-center">
 						<div class="todo-no">1.</div>
 						<div class="todo-detail text-muted">Complete the action items on todos</div>
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 				</div>
-				<hr>
+				<hr> -->
 			</div>
 
 
