--- a/index.html
+++ b/index.html
@@ -52,20 +52,9 @@
 				</div>
 				<hr>
 
-				<!-- Actual todos -->
+				<div class="todo-data-list" id="todo-data-list"></div>
 
-				<!-- <div class="row">
-					<div class="todo-item d-flex flex-row justify-content-between align-items-center">
-						<div class="todo-no">1.</div>
-						<div class="todo-detail text-muted">Complete the action items on todos</div>
-						<div class="todo-status text-muted">In Progress</div>
-						<div class="todo-actions d-flex justify-content-start gap-2">
-							<button class="btn btn-danger"> Delete </button>
-							<button class="btn btn-success">Finished</button>
-						</div>
-					</div>
-				</div>
-				<hr> -->
+				<!-- Actual todos -->
 			</div>
 
 
